<resources>
    <string name="app_name">Android fronted</string>
    <string name="login_banner">您好，\n欢迎使用贷款助手</string>
    <string name="login_verification_code">验证码登录</string>
    <string name="login_password">密码登录</string>
    <string name="hint_phone_number">请输入手机号码</string>
    <string name="hint_verification_code">请输入验证码</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_confirm_password">确认密码</string>
    <string name="btn_login">立即登录</string>
    <string name="btn_register">立即注册</string>
    <string name="btn_next">下一步</string>
    <string name="btn_previous">←上一步</string>
    <string name="btn_get_verification_code">获取验证码</string>
    <string name="text_no_account">还没有账号？</string>
    <string name="text_no_accountA">去注册</string>
    <string name="text_has_account">已经有账号？</string>
    <string name="text_has_accountB">去登录</string>
    <string name="text_forgot_password">忘记密码？</string>
    <string name="text_register_title">用户注册</string>
    <string name="text_agree_terms">同意并接受《服务条款》和《隐私政策》</string>
    <string name="text_username">Username</string>
    <string name="text_certified">已实名认证</string>
    <string name="text_not_certified">未实名认证</string>
    <string name="text_credit_rating">信用等级：优</string>
    <string name="menu_account_security">账户与安全</string>
    <string name="menu_personal_info_auth">个人信息认证</string>
    <string name="menu_my_bank_card">我的银行卡</string>
    <string name="menu_loan_records">申请记录</string>
    <string name="menu_repayment_records">还款记录</string>
    <string name="menu_message_center">消息中心</string>
    <string name="menu_faq">常见问题</string>
    <string name="menu_privacy_policy">用户隐私政策条款</string>
    <string name="menu_settings">设置</string>
    <string name="nav_home">首页</string>
    <string name="nav_loan">贷款管理</string>
    <string name="nav_profile">我的</string>
    <string name="go_detail">进入详情</string>
    <string name="avatar">用户头像</string>
    <string name="app_logo">Logo</string>
    <string name="search_loan_product">搜索贷款产品</string>
    <string name="system_announcement">系统公告:......</string>
    <string name="advertisements">广告</string>
    <string name="ad_position">广告位</string>
    <string name="quick_entry">快捷入口</string>
    <string name="loan_process_intro">贷款流程介绍</string>
    <string name="clear_process_and_materials">流程清晰\n材料明确</string>
    <string name="my_credit_limit">我的授信额度</string>
    <string name="credit_confirmation_and_usage">授信确认\n灵活动用</string>
    <string name="application_progress_query">申请进度查询</string>
    <string name="real_time_tracking_and_transparency">实时追踪\n审批透明</string>
    <string name="hot_products">热门产品</string>
    <string name="xxx_loan">XXX贷</string>
    <string name="description">低利率，适合长期资金需求</string>
    <string name="annual_interest_rate">年化利率</string>
    <string name="highest_limit">最高额度</string>
    <string name="loan_term">贷款期限</string>
    <string name="loan_usage">贷款用途</string>
    <string name="interest_rate_value">XXX%</string>
    <string name="limit_value">XXX元</string>
    <string name="term_value">X-X月</string>
    <string name="learn_more">立即办理</string>
    <string name="exp_loan_usage">购房、装修、大额消费</string>
    <string name="nav_back">返回</string>
    <string name="loan_limit">贷款额度</string>
    <string name="repayment_method">还款方式</string>
    <string name="preferential_policy">优惠政策</string>
    <string name="product_detail">产品详情</string>
    <string name="limit_value1">X-X元</string>
    <string name="example_method">等额本息</string>
    <string name="example_policy">首月利息减免，审批通过即享</string>
    <string name="loan_term_value">可选x,x,x,x,x,x期</string>
    <string name="apply_now">去申请</string>
    <string name="loan_apply">贷款申请</string>
    <string name="true_name">姓名</string>
    <string name="hint_true_name">请输入真实姓名</string>
    <string name="phone_number">手机号码</string>
    <string name="id_card_type">证件类型</string>
    <string name="id_card_number">证件号码</string>
    <string name="hint_id_card_number">请输入证件号码</string>
    <string name="loan_amount">贷款金额</string>
    <string name="exp_loan_amount1">5000元</string>
    <string name="exp_loan_amount2">10000元</string>
    <string name="exp_loan_amount3">20000元</string>
    <string name="exp_loan_amount4">50000元</string>
    <string name="exp_loan_term">X期</string>
    <string name="apply_now2">确认信息无误，提交申请</string>
    <string name="selected_loan_plan">已选贷款方案</string>
    <string name="search">搜索</string>
    <string name="clear">清除</string>
    <string name="tab_all_products">全部产品</string>
    <string name="tab_my_applications">我的申请</string>
    <string name="filter">筛选</string>
    <string name="apply_filter">应用筛选</string>
    <string name="min">最低利率</string>
    <string name="max">最高利率</string>
    <string name="min_month">最小期限</string>
    <string name="max_month">最大期限</string>
    <string name="min_rate">最低利率</string>
    <string name="max_rate">最高利率</string>
    <string name="personal_consumption">个人消费</string>
    <string name="agricultural_production">农业生产</string>
    <string name="business_operation">企业经营</string>
    <string name="rate">利率</string>
    <string name="amount">额度</string>
    <string name="term">期限</string>
    <string name="personal_info">个人信息认证</string>
    <string name="info_banner_one">完善\n个人信息</string>
    <string name="info_banner_two">贷款快人一步</string>
    <string name="id_info">实名认证</string>
    <string name="job_info">工作证明</string>
    <string name="house_info">房产证明</string>
    <string name="other_info">第三方证明</string>
    <string name="no_info">未认证</string>
    <string name="al_info">已认证</string>
    <string name="upload_the_face_of_your_ID_card">点击上传身份证人像面</string>
    <string name="upload_the_back_of_your_ID_card">点击上传身份证国徽面</string>
    <string name="your_name">您的姓名</string>
    <string name="ID_number">身份证号</string>
    <string name="enter_your_name">请输入您的真实姓名</string>
    <string name="enter_your_ID_card">请输入您的身份证号码</string>
    <string name="conform_submission">确认提交</string>
    <string name="no_info_id">您还未上传实名认证</string>
    <string name="upload_id_hint">上传实名认证以提高贷款额度</string>
    <string name="upload_id">上传实名认证</string>
    <string name="no_info_bank_card">暂未认证银行卡</string>
    <string name="goto_info_bank_card">认证银行卡</string>
    <string name="bank_card_number">银行卡号</string>
    <string name="bank_name">银行名称</string>
    <string name="enter_bank_card_number">请输入银行卡号</string>
    <string name="enter_bank_name">请输入银行名称</string>
    <string name="manage_my_bank_card">管理</string>
    <string name="property_cert">不动产证明</string>
    <string name="no_info_property">您还未上传不动产证明</string>
    <string name="upload_property_hint">上传不动产证明以提高贷款额度</string>
    <string name="upload_property">上传不动产证明</string>
    <string name="job_cert">工作证明</string>
    <string name="no_info_job">您还未上传工作证明</string>
    <string name="upload_job_hint">上传工作证明以提高贷款额度</string>
    <string name="upload_job">上传工作证明</string>
    <string name="third_party_cert">第三方证明</string>
    <string name="no_info_third_party">您还未上传第三方证明</string>
    <string name="upload_third_party_hint">上传第三方证明以提高贷款额度</string>
    <string name="upload_third_party">上传第三方证明</string>
    <string name="upload_material_type">上传资料类型</string>
    <string name="click_upload_image">点击上传证明图片</string>
    <string name="confirm_upload">确认上传</string>
    <string name="filter_label">筛选：</string>
    <string name="manage">管理</string>
    <string name="add_material">添加证明材料</string>
    <string name="add_bank_card">添加银行卡</string>
    <string name="name_label">姓名：</string>
    <string name="id_number_label">身份证号：</string>
    <string name="id_front_label">身份证正面：</string>
    <string name="id_back_label">身份证反面：</string>
    <string name="modify_id_info">修改实名认证</string>
    <string name="logout_confirm">退出登录确认</string>
    <string name="logout_confirm_message">确定要退出登录吗？</string>
    <string name="logout">退出</string>
    <string name="cancel">取消</string>
    <string name="my_applications">我的申请</string>
    <string name="filter_all">全部</string>
    <string name="filter_pending">审核中</string>
    <string name="filter_approved">审批通过</string>
    <string name="filter_rejected">已拒绝</string>
    <string name="filter_cancelled">已取消</string>
    <string name="record_count">共有%d条申请记录</string>
    <string name="no_application_records">暂无贷款申请记录</string>
    <string name="apply_time_label">申请时间: %s</string>
    <string name="apply_time">申请时间</string>
    <string name="cancel_application">取消申请</string>
    <string name="view_detail">查看详情 ></string>
    <string name="application_amount">申请金额</string>
    <string name="my_loans">我的贷款</string>
    <string name="loan_order_count">共有%d条贷款订单</string>
    <string name="no_loan_orders">暂无贷款订单记录</string>
    <string name="filter_normal">还款中</string>
    <string name="filter_overdue">已逾期</string>
    <string name="filter_completed">已结清</string>
    <string name="notification_center">消息中心</string>
    <string name="one_click_read">一键已读</string>
    <string name="notification_setting">消息设置</string>
    <string name="service_notification">服务通知</string>
    <string name="system_notification">系统通知</string>
    <string name="marketing_notification">活动福利</string>
    <string name="no_notification">暂无通知内容</string>
    <string name="mark_all_read_success">已标记所有通知为已读</string>
    <string name="mark_read_success">已标记为已读</string>
    <string name="notification_load_error">加载通知失败</string>
    <string name="notification_mark_error">标记已读失败</string>
    <string name="foreground_service_running">消息服务正在运行</string>
    <string name="foreground_service_description">正在监听新消息</string>
    <string name="repayment_plan_filter_all">全部</string>
    <string name="repayment_plan_filter_repaid">已还</string>
    <string name="repayment_plan_filter_unpaid">未还</string>
    <string name="repayment_plan_filter_overdue">逾期</string>
    <string name="repayment_plan_filter">筛选</string>
    <string name="repayment_plan_sort_term">期数正序</string>
    <string name="loan_manage_monthly_repayment">近30日待还(元)</string>
    <string name="loan_manage_principal">待还本金</string>
    <string name="loan_manage_interest">待还利息</string>
    <string name="loan_manage_total">待还总额</string>
    <string name="payment_title">支付</string>
    <string name="payment_select_method">请选择付款方式</string>
    <string name="payment_alipay">支付宝</string>
    <string name="payment_wechat">微信</string>
    <string name="payment_cloud_quickpass">云闪付</string>
    <string name="payment_more_methods">更多支付方式</string>
    <string name="payment_contact_service">支付遇到问题？联系客服</string>
    <string name="payment_pay_now">立即支付</string>
    <string name="payment_term_format">第%d期还款</string>
    <string name="payment_success_title">还款成功</string>
    <string name="payment_success_term_format">您的第%d期还款已提交成功</string>
    <string name="payment_success_reminder_title">还款提醒</string>
    <string name="payment_success_reminder_1">扣款指令已发送，资金预计 2 小时内到账</string>
    <string name="payment_success_reminder_2">本期账单已结清，请留意还款计划</string>
    <string name="payment_success_reminder_3">保持良好还款记录，有助于积累您的信用分</string>
    <string name="payment_success_done">完成</string>
    <string name="payment_select_method_hint">请选择支付方式</string>
    <string name="payment_get_detail_failed">获取订单详情失败</string>
    <string name="product_icon">产品图标</string>
</resources>